fix project-card overflow for skills used

--- a/webApp/static/styles/app.css
+++ b/webApp/static/styles/app.css
@@ -522,6 +522,7 @@ h1 {
 .skills-page-color {
   background-color: var(--color-secondary);
   position: relative;
+  overflow: hidden;
   z-index: 2;
 }
 
@@ -677,6 +678,7 @@ h1 {
   width: 450px;
   margin-top: 2rem;
   background-color: var(--color-grey-2);
+  overflow: hidden;
 }
 
 .project-card-container {
@@ -685,7 +687,7 @@ h1 {
 
 .prj-img {
   width: 100%;
-  height: 180px;
+  height: 185px;
   background-color: var(--color-primary);
   border-radius: 5px 5px 0 0;
   background-repeat: no-repeat;
@@ -728,7 +730,6 @@ h1 {
 .prj-skill-used {
   margin: 0.5rem;
   flex-direction: row;
-  flex-wrap: wrap;
   gap: 0.5rem;
   font-weight: 400;
 }
