--- a/webApp/static/styles/sass/pages/_projects.scss
+++ b/webApp/static/styles/sass/pages/_projects.scss
@@ -53,13 +53,14 @@
     @include size(450px, 450px);
     margin-top: 2rem;
     background-color: var(--color-grey-2);
+    overflow: hidden;
 }
 .project-card-container {
     position: relative;
 }
 .prj-img {
     width: 100%;
-    height: 180px;
+    height: 185px;
     background-color: var(--color-primary);
     border-radius: 5px 5px 0 0;
     background-repeat: no-repeat;
@@ -96,7 +97,6 @@
     @extend %justify-start-align-center;
     margin: 0.5rem;
     flex-direction: row;
-    flex-wrap: wrap;
     gap: 0.5rem;
     font-weight: 400;
 }
